<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animated"
    android:id="@+id/main_anim"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/intro"
        android:textStyle="bold|italic"
        android:textSize="42sp"
        android:textColor="@color/redAccent"
        android:fontFamily="cursive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/basic"
        android:layout_width="225dp"
        android:layout_height="45dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/butt_bg"
        android:text="@string/main_butt1"
        android:textColor="@color/tanAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/sci"
        android:layout_width="225dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/butt_bg"
        android:text="@string/main_butt2"
        android:textColor="@color/tanAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basic" />

    <Button
        android:id="@+id/unit"
        android:layout_width="225dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/butt_bg"
        android:text="@string/main_butt3"
        android:textColor="@color/tanAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sci"
        app:layout_constraintVertical_bias="0.025" />
</androidx.constraintlayout.widget.ConstraintLayout>