<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Currency">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.70"
            android:contentDescription="@string/to"
            android:src="@drawable/app_bg" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/to"
            android:layout_weight="1" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:padding="20dp"
        android:rowCount="1"
        android:columnCount="1">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="15dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            app:cardCornerRadius="20dp"
            app:cardMaxElevation="20dp">
            <Spinner
                android:id="@+id/currspin1"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:entries="@array/currencyy"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:layout_gravity="center_horizontal"
                android:textSize="30sp"
                android:textColor="@color/black"/>
            <Spinner
                android:id="@+id/currspin2"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:entries="@array/currencyy"/>
            <EditText
                android:id="@+id/currin"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:hint="@string/hint"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textAlignment="center"/>
            <Button
                android:id="@+id/currconv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="150dp"
                android:text="@string/convert"
                android:textColor="@color/tanAccent"
                android:background="@drawable/func_butt"/>
            <TextView
                android:id="@+id/currans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/redBackground"
                android:layout_marginTop="250dp"
                android:layout_gravity="center_horizontal"/>
        </androidx.cardview.widget.CardView>

    </GridLayout>
</RelativeLayout>