<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_2"
    android:orientation="vertical"
    android:id="@+id/backgr"
    tools:context=".Unit">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:columnCount="2"
        android:rowCount="1"
        android:layout_weight="8"
        android:padding="10dp"
        android:layout_marginTop="30dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/currency"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            app:cardMaxElevation="10dp"
            app:cardCornerRadius="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical">

                <ImageView
                    android:layout_width="111dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/currency" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/curr"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textStyle="bold|italic"
                    android:fontFamily="cursive"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/weight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            app:cardMaxElevation="10dp"
            app:cardCornerRadius="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical">

                <ImageView
                    android:layout_width="106dp"
                    android:layout_height="84dp"
                    android:layout_gravity="center"
                    android:src="@drawable/weight" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/weight"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textStyle="bold|italic"
                    android:fontFamily="cursive"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:columnCount="2"
        android:rowCount="1"
        android:layout_weight="8"
        android:padding="10dp"
        android:layout_marginTop="30dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            app:cardMaxElevation="10dp"
            app:cardCornerRadius="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical">

                <ImageView
                    android:layout_width="98dp"
                    android:layout_height="97dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ttt" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/time"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textStyle="bold|italic"
                    android:fontFamily="cursive"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/length"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            app:cardMaxElevation="10dp"
            app:cardCornerRadius="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/length"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/length"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textStyle="bold|italic"
                    android:fontFamily="cursive"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:columnCount="2"
        android:rowCount="1"
        android:layout_weight="8"
        android:padding="10dp"
        android:layout_marginTop="30dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/area"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            app:cardMaxElevation="10dp"
            app:cardCornerRadius="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="76dp"
                    android:layout_gravity="center"
                    android:src="@drawable/area" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/area"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textStyle="bold|italic"
                    android:fontFamily="cursive"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/temperature"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            app:cardMaxElevation="10dp"
            app:cardCornerRadius="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical">

                <ImageView
                    android:layout_width="79dp"
                    android:layout_height="86dp"
                    android:layout_gravity="center"
                    android:src="@drawable/temp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/temp"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textStyle="bold|italic"
                    android:fontFamily="cursive"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>
</LinearLayout>